# ldk-node-flutter

./: .gitignore  .metadata  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  GETTING_STARTED.md  INDEX.md  PUB_DEV_GUIDE.md  README.md  analysis_options.yaml  dockDockBuildParams.json  flutter_rust_bridge.yaml  lefthook.yml  llms-full.txt  llms.txt  makefile  pubspec.yaml
.cursor/: rules.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: precompile_binaries.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/io/ldk/f/ldk_mobile/: LdkMobilePlugin.kt
android/src/main/kotlin/io/ldk/f/ldk_node/: LdkNodePlugin.kt
android/src/main/kotlin/io/ldk/f/ldk_node_flutter/: LdkNodeFlutterPlugin.kt
cargokit/: README
cargokit/gradle/: plugin.gradle
example/: .gitignore  README.md  README_CONFIGURATION.md  cargokit_options.yaml  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/io/ldk/f/ldk_mobile_example/: MainActivity.kt
example/android/app/src/main/kotlin/io/ldk/f/ldk_node_flutter_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/integration_test/: bolt11_and_12_test.dart  bolt11_test.dart  bolt12_test.dart  new_apis_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: dev.xcscheme
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/config/: node_config.dart
example/lib/models/: wallet_state.dart
example/lib/providers/: wallet_provider.dart
example/lib/screens/: dashboard_screen.dart  invoice_display_screen.dart  lightning_screen.dart  onboarding_screen.dart  onchain_screen.dart  settings_screen.dart  transaction_detail_screen.dart  transaction_history_screen.dart
example/lib/services/: settings_service.dart
example/lib/utils/: electrs.dart
example/lib/widgets/: balance_card.dart  quick_actions.dart  recent_transactions.dart  safe_text_field.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/scripts/: run_emulator.sh
example/test/: widget_test.dart
examples/ai-ready/: README.md
examples/ai-ready/01_basic_wallet/: PROMPT.md
examples/ai-ready/02_send_receive_onchain/: PROMPT.md
examples/ai-ready/03_lightning_payments/: PROMPT.md
examples/ai-ready/04_open_channel/: PROMPT.md
examples/ai-ready/05_bolt12_offers/: PROMPT.md
examples/ai-ready/06_unified_qr/: PROMPT.md
examples/ai-ready/07_spontaneous_payments/: PROMPT.md
examples/ai-ready/08_event_handling/: PROMPT.md
examples/ai-ready/09_wallet_restore/: PROMPT.md
examples/ai-ready/10_lsp_integration/: PROMPT.md
ios/: ldk_mobile.podspec  ldk_node.podspec  ldk_node_flutter.podspec
ios/Classes/: LdkMobilePlugin.m  LdkNodeFlutterPlugin.h  LdkNodeFlutterPlugin.m  LdkNodePlugin.h  LdkNodePlugin.m  SwiftLdkMobilePlugin.swift  SwiftLdkNodeFlutterPlugin.swift  SwiftLdkNodePlugin.swift  bindings.h  frb_generated.h
ios/ldk_node.xcframework/: Info.plist
lib/: ldk_mobile.dart  ldk_mobile_method_channel.dart  ldk_mobile_platform_interface.dart  ldk_node.dart  ldk_node_flutter.dart
lib/src/: root.dart
lib/src/utils/: default_services.dart  event_handler.dart  event_handler.freezed.dart  exceptions.dart  extensions.dart  frb.dart  loader.dart  utils.dart
macos/: ldk_node.podspec
macos/Classes/: frb_generated.h
mcp-server/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  mcp.json  pyproject.toml  server.json
mcp-server/client-configs/: README.md  claude.json  cursor.json  mcp-inspector.sh
mcp-server/docs/: API.md
mcp-server/src/ldk_node_mcp/: __init__.py  server.py
mcp-server/tests/: __init__.py  test_server.py
native/: Cargo.toml  copy.sh  makefile
native/ldk-lite/: Cargo.toml
native/ldk-lite/src/: error.rs  event.rs  lib.rs  wallet.rs
native/ldk-lite/src/tests/: functional_tests.rs  test_utils.rs
native/src/: bridge_generated.io.rs  bridge_generated.rs  error.rs  event.rs  ffi.rs  hex_utils.rs  io_utils.rs  ldk.rs  lib.rs  logger.rs  native_functional_tests.rs  peer_store.rs  r_api.rs  simple_log.rs  types.rs  utils.rs  wallet.rs
rust/: .flutter_rust_bridge.yml  Cargo.toml  android.sh  build.rs  cargokit.yaml  copy.sh  darwin.sh  makefile
rust/.cargo/: config.toml
rust/src/: bridge_generated.io.rs  bridge_generated.rs  errors.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  ldk.rs  lib.rs  types.rs
rust/src/api/: bolt11.rs  bolt12.rs  builder.rs  error.rs  errors.rs  extensions.rs  graph.rs  mod.rs  node.rs  on_chain.rs  spontaneous.rs  types.rs  unified_qr.rs
rust/src/test/: mod.rs
rust/src/utils/: error.rs
schemas/: node_config.json
test/: ldk_mobile_method_channel_test.dart  ldk_mobile_test.dart
