[package]
name = "native"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies.external-lib]
path = "./ldk-lite"
package = "ldk-lite"

[build-dependencies]
flutter_rust_bridge_codegen = "1.56.0"

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
once_cell = "1.16.0"
lightning-invoice = { git = "https://github.com/tnull/rust-lightning", branch="2022-11-add-transaction-sync-crate" }
flutter_rust_bridge = "1.56.0"
bitcoin = "0.29.2"
openssl = { version = "0.10.35", features = ["vendored"] }
openssl-sys = {version = "0.9.66", features = ["vendored"]}

log = "0.4.17"
simplelog = "0.12.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1