[package]
name = "native"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]


[build-dependencies]
flutter_rust_bridge_codegen = { version = "= 1.68.0"  }

[dependencies]
lightning = { version = "0.0.114", features = ["max_level_trace", "std"] }
lightning-invoice = { version = "0.22" }
lightning-net-tokio = { version = "0.0.114" }
lightning-persister = { version = "0.0.114" }
lightning-background-processor = { version = "0.0.114" }
lightning-rapid-gossip-sync = { version = "0.0.114" }
lightning-transaction-sync = { version = "0.0.114", features = ["esplora-async"] }
bdk = { version = "0.27.1", default-features = false, features = ["async-interface", "use-esplora-async", "key-value-db"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
bitcoin = "0.29.2"
log = "0.4.17"
simplelog = "0.12.0"
rand = "0.6.0"
chrono = "0.4"
futures = "0.3"
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.16.0"
tokio = { version = "1", features = [ "full" ] }
flutter_rust_bridge = { version = "= 1.68.0"  }


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*

