[package]
name = "ldk_node"
version = "0.6.2"
edition = "2021"

# This is needed to suppress the frb_expand cfg warning
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lib]
crate-type = ["staticlib", "cdylib"]


[dependencies]
flutter_rust_bridge = "=2.11.1"
ldk-adapter = { git = "https://github.com/LtbLightning/ltbl-ffi.git", rev = "911aee001d98bb711d3f32390716130562538edd" }
shared = { git = "https://github.com/LtbLightning/ltbl-ffi.git", rev = "911aee001d98bb711d3f32390716130562538edd" }
# ldk-adapter = { path = "../../ltbl-ffi/ldk-adapter" }
# shared = { path = "../../ltbl-ffi/shared" }
# ldk-node = {git = 'https://github.com/lightningdevkit/ldk-node.git', rev = "0b999773fa54a3c54f007bebccdceb1fa67247fe"}
# Force lazy_static to use version 1.4.0 to resolve dependency conflict
lazy_static = "=1.4.0"
easy-ext = "1.0.2"



[profile.release]
opt-level = 3     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'

