[package]
name = "ldk_node"
version = "0.4.2"
edition = "2021"

# This is needed to suppress the frb_expand cfg warning
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lib]
crate-type = ["staticlib", "cdylib"]


[build-dependencies]
anyhow = "1.0.68"
[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = { version = "1.0.71"}
# ldk-node = { version = "=0.6.1"  }
ldk-node = {git = 'https://github.com/lightningdevkit/ldk-node.git', rev = "be2bc0782cfcef658dc751a96c85af717e3d491c"}


[profile.release]
opt-level = 3     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'

